tests/assignment/error_lvalue_str.say
"hello" = "world"; // error: Invalid assignment